# rust-poor-mans-embeddings

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/comparer/: embeddings_comparer.rs  mod.rs
src/examples/: similarities.rs
src/reader/: file_reader.rs
src/static/articles/: economy_article.txt  literature_article.txt  music_article.txt  sports_article.txt  technology_article
